Added statement after image

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 		<h1>Git, GitHub & the Command Line</h1>
 		<p>Gotta love becoming a collaborative coder <3</p>
 		<img src="img/happy-blue-robot.png">
+		<p>
+		I really like the positivity and inclusiveness that SkillCrush offers. Way to be!
+		</p>
 	</section>
 </body>
 </html>
